--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 bcrypt==3.1.4
 cffi==1.11.5
 click==6.7
+dnspython==1.15.0
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
 Flask-PyMongo==0.5.1
 Flask-Testing==0.7.1
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
